2005-02-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (do_key_sample plot_boxes)
	src/term.c (term_apply_lp_properties):
	Apply linetype properties (color *AND* dot/dash/solid) before applying
	pm3d color, if any.

2005-02-02  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot3d.c (get_3ddata): Ignore blank lines in data file input to
	"splot with vectors".

	* src/set.c (set_xyzlabel): Allow set label textcolor rgb <foo>.

	* src/gplt_x11.c (display): Always initialize gc_pm3d, in case we need
	it to handle individual rgb colors even in the absence of a palette.

	* src/save.c (save_textcolor) src/save.h 
	src/show.c (show_label show_xyzlabel): Export save_textcolor() so
	that various "show ...label" routines can use it also. Also fixes
	compile error if configured --disable-pm3d.


2005-02-01  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_boxes): Plot with boxerrorbars and three columns
	of input data hit a rare code path that set the boxwidth wrong in some
	cases. Fixes bug #1101409.

2005-02-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/time.c (xstrftime): Shift reply range of %I and %l time
	formats from [0:11] to [1:12].

	* docs/gnuplot.doc (time/date specifiers): Fix descriptions of
	hour format specifiers (explain 0-filled vs. non-filled default,
	give correct output ranges).

2005-02-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/set.c (set_separator): Replace literal TAB character in
	source by a \t.

	* src/command.c (input_line, input_line_len): Renamed to
	gp_input_line and gp_input_line_len respectively, to avoid a
	conflict of input_line with a like name non-standard library
	function on QNX.

	* src/command.h: Renamed declarations of these, too.

	* all over the place: Renamed usages of these variables.  Some
	CodeStyle cleanups, while at it.

2005-01-31  Ethan Merritt  <merritt@u.washington.edu>
